--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 body {
   margin: auto 0;
-
+  font-family: Arial, Helvetica, sans-serif;
 }
 .zone {
-    /* padding:30px 50px;
-    margin:40px 60px; */
     cursor:pointer;
-    /* display:inline-block; */
     color:#FFF;
     font-size:2em;
     border-radius:4px;
@@ -21,6 +18,15 @@ body {
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }
 
+.box:hover {
+    -webkit-transform: rotate(-7deg);
+    -moz-transform: rotate(-7deg);
+    -o-transform: rotate(-7deg);
+    transform: rotate(-7deg)
+}
+/***********************************************************************
+ *  Nav Bar
+ **********************************************************************/
 @media only screen and (max-width: 600px) {
   .main-nav {
     font-size: 0.5em;
@@ -49,17 +55,26 @@ a {
   text-decoration: none;
 }
 
-/* Cover style */
-
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+/***********************************************************************
+ *  Cover
+ **********************************************************************/
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 80vh; /* 80 percent */
 }
-
-/* Grid  */
-
+.cover {
+  width: 30rem;
+}
+/***********************************************************************
+ *  Grid Panel
+ **********************************************************************/
 .grid-wrapper {
   display: grid;
   gap: 20px;
@@ -78,6 +93,9 @@ a {
   width: 40px;
 }
 
+/***********************************************************************
+ *  Footer
+ **********************************************************************/
 footer {
   text-align: center;
 }
